force-app/main/default/objects/Send_Survey__c/Send_Survey__c.object-meta.xml
<CustomObject>
    <description>Used to data load custom Send Survey records solely for the purpose of initiating manual surveys</description>
    <label>Send Survey</label>
    <nameField>
        <label>Send Survey Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Send Surveys</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>