force-app/main/default/objects/Send_Survey__c/fields/Case__c.field-meta.xml
<CustomField>
    <fullName>Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Related Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Send Surveys</relationshipLabel>
    <relationshipName>Send_Surveys</relationshipName>
    <type>Lookup</type>
</CustomField>