force-app/main/default/objects/Send_Survey__c/fields/Case_Category__c.field-meta.xml
<CustomField>
    <fullName>Case_Category__c</fullName>
    <label>Case Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Amendment of Customer Details</fullName>
            </value>
            <value>
                <fullName>Billing &amp; Invoice</fullName>
            </value>
            <value>
                <fullName>Complaints</fullName>
            </value>
            <value>
                <fullName>Contract Issues</fullName>
            </value>
            <value>
                <fullName>Create a new Order</fullName>
            </value>
            <value>
                <fullName>Escalation</fullName>
            </value>
            <value>
                <fullName>General Enquiry</fullName>
            </value>
            <value>
                <fullName>Online system support</fullName>
            </value>
            <value>
                <fullName>Order Enquiry</fullName>
            </value>
            <value>
                <fullName>Reporting</fullName>
            </value>
            <value>
                <fullName>Sales Enquiry</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>