force-app/main/default/objects/Send_Survey__c/fields/Case_Sub_Category__c.field-meta.xml
<CustomField>
    <fullName>Case_Sub_Category__c</fullName>
    <label>Case Sub-Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Add, Amend, Remove Authorised User</fullName>
            </value>
            <value>
                <fullName>Billing Address Update (Mail/ E-Mail)</fullName>
            </value>
            <value>
                <fullName>Site Address Update</fullName>
            </value>
            <value>
                <fullName>Site Contact Name Update</fullName>
            </value>
            <value>
                <fullName>Billing Contact Name Update</fullName>
            </value>
            <value>
                <fullName>Company Name Changes</fullName>
            </value>
            <value>
                <fullName>Account Restructure</fullName>
            </value>
            <value>
                <fullName>Research Item</fullName>
            </value>
            <value>
                <fullName>Inventory Management</fullName>
            </value>
            <value>
                <fullName>Autopay/ Direct Debit Update</fullName>
            </value>
            <value>
                <fullName>Close Account/ Termination Request</fullName>
            </value>
            <value>
                <fullName>Billing Dispute</fullName>
            </value>
            <value>
                <fullName>Copy of Invoice, Credit / Debit Memo</fullName>
            </value>
            <value>
                <fullName>Payment / Allocation Enquiry</fullName>
            </value>
            <value>
                <fullName>Invoice /Line Item Questions</fullName>
            </value>
            <value>
                <fullName>Customer Billing Portal Add, Amend or Remove</fullName>
            </value>
            <value>
                <fullName>Invoice Amendment</fullName>
            </value>
            <value>
                <fullName>Add / Remove Customer Suspension</fullName>
            </value>
            <value>
                <fullName>PO Maintenance</fullName>
            </value>
            <value>
                <fullName>(Purchase Order Add, Update, Remove)</fullName>
            </value>
            <value>
                <fullName>Bankruptcy/Insolvency</fullName>
            </value>
            <value>
                <fullName>Non Customer Complaint</fullName>
            </value>
            <value>
                <fullName>Add/amend customer rate</fullName>
            </value>
            <value>
                <fullName>Contract Discrepancy</fullName>
            </value>
            <value>
                <fullName>Destruction Records Management</fullName>
            </value>
            <value>
                <fullName>Records Management</fullName>
            </value>
            <value>
                <fullName>Data Management</fullName>
            </value>
            <value>
                <fullName>Shred</fullName>
            </value>
            <value>
                <fullName>Response Required</fullName>
            </value>
            <value>
                <fullName>High Level Escalation</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>