force-app/main/default/objects/Send_Survey__c/fields/DateValue__c.field-meta.xml
<CustomField>
    <fullName>DateValue__c</fullName>
    <formula>TEXT(DATEVALUE(CASE(
Country__c,
&apos;France&apos;, CreatedDate +1,
&apos;United States&apos;, CreatedDate - 5,
&apos;Canada&apos;, CreatedDate - 5,
&apos;Australia&apos;, CreatedDate + 10,
&apos;United Kingdom&apos;, CreatedDate,
&apos;Ireland&apos;, CreatedDate + 1,
&apos;Norway&apos;, CreatedDate + 1,
&apos;Germany&apos;, CreatedDate + 1,
&apos;Spain&apos;, CreatedDate + 1,
&apos;Belgium&apos;, CreatedDate + 1,
&apos;Austria&apos;, CreatedDate + 1,
&apos;Hungary&apos;, CreatedDate + 1,
&apos;Czech Republic&apos;, CreatedDate + 1,
&apos;Romania&apos;, CreatedDate + 2,
&apos;Netherlands&apos;, CreatedDate + 1,
&apos;Argentina&apos;, CreatedDate - 3,
&apos;Mexico&apos;, CreatedDate - 6,
&apos;Peru&apos;, CreatedDate - 5,
&apos;Colombia&apos;, CreatedDate + 1,
&apos;Chile&apos;, CreatedDate - 3,
&apos;Brazil&apos;, CreatedDate - 5,
&apos;India&apos;, CreatedDate + 5,
&apos;Sweden&apos;, CreatedDate + 1,
&apos;Denmark&apos;, CreatedDate + 1,
&apos;Finland&apos;, CreatedDate + 2,
&apos;South Africa&apos;, CreatedDate + 2,
&apos;United Arab Emirates&apos;, CreatedDate + 4,
&apos;Cyprus&apos;, CreatedDate + 2,
&apos;Turkey&apos;, CreatedDate + 3,
&apos;Hong Kong&apos;, CreatedDate + 8,
&apos;Slovakia&apos;, CreatedDate + 1,
&apos;Greece&apos;, CreatedDate + 2,
&apos;Taiwan&apos;, CreatedDate + 8,
&apos;Indonesia&apos;, CreatedDate + 7,
&apos;Singapore&apos;, CreatedDate + 8,
&apos;Malaysia&apos;, CreatedDate + 8,
&apos;South Korea&apos;, CreatedDate + 9,
&apos;Lithuania&apos;, CreatedDate + 2,
&apos;Estonia&apos;, CreatedDate + 2,
&apos;Latvia&apos;, CreatedDate + 2,
&apos;Philippines&apos;, CreatedDate + 8,
&apos;Croatia&apos;, CreatedDate + 1,
&apos;Bulgaria&apos;, CreatedDate + 2,
&apos;Serbia&apos;, CreatedDate + 1,
&apos;Thailand&apos;, CreatedDate + 7,
CreatedDate
)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>DateValue</label>
    <type>Text</type>
</CustomField>