force-app/main/default/objects/Send_Survey__c/fields/Manual_Upload__c.field-meta.xml
<CustomField>
    <fullName>Manual_Upload__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Manual Upload</label>
    <type>Checkbox</type>
</CustomField>