force-app/main/default/objects/Send_Survey__c/fields/Owner__c.field-meta.xml
<CustomField>
    <fullName>Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Case Owner Name</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Send_Surveys</relationshipName>
    <type>Lookup</type>
</CustomField>