force-app/main/default/objects/Send_Survey__c/fields/Self_Service__c.field-meta.xml
<CustomField>
    <fullName>Self_Service__c</fullName>
    <label>Self Service</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>blng__Yes_No</valueSetName>
    </valueSet>
</CustomField>