force-app/main/default/objects/Send_Survey__c/fields/Survey__c.field-meta.xml
<CustomField>
    <fullName>Survey__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Survey</label>
    <referenceTo>Survey</referenceTo>
    <relationshipLabel>Send Surveys</relationshipLabel>
    <relationshipName>Send_Surveys</relationshipName>
    <type>Lookup</type>
</CustomField>