force-app/main/default/objects/Send_Survey__c/recordTypes/Global_Order_Case.recordType-meta.xml
<RecordType>
    <fullName>Global_Order_Case</fullName>
    <active>true</active>
    <label>Global Order Case</label>
</RecordType>