force-app/main/default/objects/Send_Survey__c/recordTypes/Global_Service_Case.recordType-meta.xml
<RecordType>
    <fullName>Global_Service_Case</fullName>
    <active>true</active>
    <label>Global Service Case</label>
</RecordType>