force-app/main/default/objects/Send_Survey__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Case_Number__c</columns>
    <columns>Survey_Type__c</columns>
    <columns>ContactEmail__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Country__c</columns>
    <columns>Follow_Up_Required__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>